--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta CacheControl = "no-cache" >
     <title>Document</title>
     <link rel="stylesheet" href="src/css/base.css" />
     <!--[if lte IE 9]>
@@ -28,9 +29,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.30/angular.js"></script>
     <script src='//cdn.bootcss.com/angular-ui-router/0.3.1/angular-ui-router.min.js'></script>
     <script src="src/js/lib/ocLazyLoad.min.js"></script>
+    <script src="src/js/lib/jquery-1.7.2.min.js"></script>
     <script src="src/js/router/router.js"></script>
-    <script src="src/js/main.js"></script>
     <script src="src/js/controllers/navCtrl.js"></script>
+    <script src="src/js/main.js"></script>
+ 
 </head>
 
 <body>
